--- a/glade/app1.glade
+++ b/glade/app1.glade
@@ -1200,6 +1200,9 @@
                                                             <placeholder/>
                                                             </child>
                                                             <child>
+                                                            <placeholder/>
+                                                            </child>
+                                                            <child>
                                                             <widget class="GtkLabel" id="label_start_selector_jumps">
                                                             <property name="visible">True</property>
                                                             <property name="can_focus">False</property>
@@ -14043,7 +14046,7 @@ Concentric</property>
                                                     <property name="vscrollbar_policy">automatic</property>
                                                     <child>
                                                       <widget class="GtkViewport" id="viewport_sprint">
-                                                        <property name="height_request">150</property>
+                                                        <property name="height_request">200</property>
                                                         <property name="visible">True</property>
                                                         <property name="can_focus">False</property>
                                                         <child>
@@ -14058,7 +14061,7 @@ Concentric</property>
                                                   </widget>
                                                   <packing>
                                                     <property name="resize">True</property>
-                                                    <property name="shrink">True</property>
+                                                    <property name="shrink">False</property>
                                                   </packing>
                                                 </child>
                                               </widget>
@@ -19548,6 +19551,9 @@ then click this button.</property>
                                                             <property name="x_options"/>
                                                             <property name="y_options"/>
                                                             </packing>
+                                                            </child>
+                                                            <child>
+                                                            <placeholder/>
                                                             </child>
                                                             <child>
                                                             <placeholder/>
