--- a/glade/preferences_win.glade
+++ b/glade/preferences_win.glade
@@ -2763,7 +2763,7 @@ Other</property>
                                     <property name="can_focus">True</property>
                                     <property name="receives_default">False</property>
                                     <property name="draw_indicator">True</property>
-                                    <signal name="clicked" handler="on_check_force_1_clicked" swapped="no"/>
+                                    <signal name="clicked" handler="on_check_force_clicked" swapped="no"/>
                                     <child>
                                       <widget class="GtkHBox" id="hbox30">
                                         <property name="visible">True</property>
@@ -2934,7 +2934,7 @@ Fitted</property>
                                           <widget class="GtkLabel" id="label86">
                                             <property name="visible">True</property>
                                             <property name="can_focus">False</property>
-                                            <property name="label">%</property>
+                                            <property name="label">% maximum force</property>
                                           </widget>
                                           <packing>
                                             <property name="expand">True</property>
@@ -3088,7 +3088,7 @@ Fitted</property>
                                     <property name="can_focus">True</property>
                                     <property name="receives_default">False</property>
                                     <property name="draw_indicator">True</property>
-                                    <signal name="clicked" handler="on_check_force_2_clicked" swapped="no"/>
+                                    <signal name="clicked" handler="on_check_force_clicked" swapped="no"/>
                                     <child>
                                       <widget class="GtkHBox" id="hbox31">
                                         <property name="visible">True</property>
@@ -3259,7 +3259,7 @@ Fitted</property>
                                           <widget class="GtkLabel" id="label90">
                                             <property name="visible">True</property>
                                             <property name="can_focus">False</property>
-                                            <property name="label">%</property>
+                                            <property name="label">% maximum force</property>
                                           </widget>
                                           <packing>
                                             <property name="expand">True</property>
@@ -3413,7 +3413,7 @@ Fitted</property>
                                     <property name="can_focus">True</property>
                                     <property name="receives_default">False</property>
                                     <property name="draw_indicator">True</property>
-                                    <signal name="clicked" handler="on_check_force_3_clicked" swapped="no"/>
+                                    <signal name="clicked" handler="on_check_force_clicked" swapped="no"/>
                                     <child>
                                       <widget class="GtkHBox" id="hbox32">
                                         <property name="visible">True</property>
@@ -3584,7 +3584,7 @@ Fitted</property>
                                           <widget class="GtkLabel" id="label94">
                                             <property name="visible">True</property>
                                             <property name="can_focus">False</property>
-                                            <property name="label">%</property>
+                                            <property name="label">% maximum force</property>
                                           </widget>
                                           <packing>
                                             <property name="expand">True</property>
@@ -3738,7 +3738,7 @@ Fitted</property>
                                     <property name="can_focus">True</property>
                                     <property name="receives_default">False</property>
                                     <property name="draw_indicator">True</property>
-                                    <signal name="clicked" handler="on_check_force_4_clicked" swapped="no"/>
+                                    <signal name="clicked" handler="on_check_force_clicked" swapped="no"/>
                                     <child>
                                       <widget class="GtkHBox" id="hbox33">
                                         <property name="visible">True</property>
@@ -3909,7 +3909,7 @@ Fitted</property>
                                           <widget class="GtkLabel" id="label98">
                                             <property name="visible">True</property>
                                             <property name="can_focus">False</property>
-                                            <property name="label">%</property>
+                                            <property name="label">% maximum force</property>
                                           </widget>
                                           <packing>
                                             <property name="expand">True</property>
